[package]
name = "s3-benchrunner-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-s3-transfer-manager = { git = "https://github.com/awslabs/aws-s3-transfer-manager-rs.git", rev = "790ead476a104cf0b66fdd00b5b9c3636321b244" }

tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry_sdk = { version = "0.26", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-stdout = { version = "0.26", features = ["trace"] }
opentelemetry-semantic-conventions = "0.26"

anyhow = "1.0.86"
async-trait = "0.1.81"
aws-config = "1.5.4"
aws-sdk-s3 = "1.41.0"
bytes = "1"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
fastrand = "=2.1.0"
futures-util = "0.3"
ordered-float = "4.3.0"
pprof = { version = "0.13.0", features = ["flamegraph"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
tokio = { version = "1.40.0", features = ["io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[patch."https://github.com/awslabs/aws-s3-transfer-manager-rs"]
#aws-s3-transfer-manager = { path = "../../../aws-s3-transfer-manager-rs/aws-s3-transfer-manager" }

[patch.crates-io]
#hyper-util = { path = "../../../hyper-util" }
#aws-sdk-s3 = { path = "../../../aws-sdk-rust/sdk/s3" }

[profile.release]
# use debuginfo for better flamegraphs
debug=true