[package]
name = "s3-benchrunner-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

# Swap which line is commented-out to use GitHub or local aws-s3-transfer-manager
aws-s3-transfer-manager = { git = "https://github.com/awslabs/aws-s3-transfer-manager-rs.git", rev = "4434ed6ab08488d8e1c1efcb1e6ac25628763af9" }
#aws-s3-transfer-manager = { path = "../../../aws-s3-transfer-manager-rs/aws-s3-transfer-manager" }

tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry_sdk = { version = "0.26", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-stdout = { version = "0.26", features = ["trace"] }
opentelemetry-semantic-conventions = "0.26"

anyhow = "1.0.86"
async-trait = "0.1.81"
aws-config = "1.5.15"
aws-sdk-s3 = "1.66.0"
bytes = "1"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
fastrand = "=2.1.0"
futures-util = "0.3"
ordered-float = "4.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
tokio = { version = "1.40.0", features = ["io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
